--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,15 +11,15 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Install Go
+      - name: Set up Go
         uses: actions/setup-go@v3
-	with:
-	  go-version: '1.22'
+        with:
+          go-version: '1.22'  # Adjust this to your Go version
 
       - name: Fetch dependencies
         run: |
-	  cd src
-	  go mod download
+          cd src
+          go mod download
 
       - name: Test with Go
         run: go test -v -cover ./...
